# RES4SHO

./: LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  sampling.py
web/: sigma_curves.js
