[project]
name = "RES4SHO"
version = "1.0.0"
description = "High-Frequency Detail Sampling based on Res Sampling for ComfyUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
    "Environment :: GPU :: Apple Metal"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/WASasquatch/RES4SHO"
"Bug Tracker" = "https://github.com/WASasquatch/RES4SHO/issues"

[tool.comfy]
PublisherId = "was"
DisplayName = "RES4SHO"
requires-comfyui = ">=1.0.0"
